--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,12 +8,12 @@
             "name": "Python Windows: Current File",
             "type": "python",
             "request": "launch",
-            "program": "${file}",
+            "program": "./wm2000_ws110x_oss_recovery.py",
             "args": [
                 "--bl=./fw/wm2000/wm2000-bootloader-4_07.bin",
-                "--mon=./fw/wm2000/mon-wm2000-4_07.bin",
-                "--tios=./fw/wm2000/tios-wm2000-4_01_02.bin",
-                "--serial=COM6"
+                "--mon=./fw/wm2000/mon-wm2000-4_09.bin",
+                "--tios=./fw/wm2000/tios-wm2000-4_03_03.bin",
+                "--serial=COM9"
             ],
             "console": "integratedTerminal"
         },
